<resources>
    <string name="app_name">Edukt</string>
    <string name="app_version">Alpha version</string>

    <!-- Drawer menu options -->
    <string name="title_section1">Timeline</string>
    <string name="title_section2">Recientes</string>
    <string name="title_section3">Documentos</string>
    <string name="title_section4">Mensajes</string>
    <string name="title_section5">Profesores</string>
    <string name="title_section6">Cuenta</string>
    <string name="title_section7">Cerrar sesión</string>
    <string name="Registrarse">sucorreo@mail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="progress_dialog">Cargando...</string>
    <string name="spinner_prompt">Seleccione</string>

    <!-- Login -->
    <string name="hello">Hello World, AndroidDashboard!</string>
    <string name="label_dashboard">Edukt - Mobile</string>
    <string name="label_login">Edukt - Acceso de usuarios</string>
    <string name="label_register">Edukt - Registro de usuarios</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="email">Email</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_about">Acerca de...</string>
    <string name="action_version">V1.0</string>
    <string name="login_message">Ingrese sus datos de acceso</string>
    <string name="login_crear">Registrarse</string>
    <string name="email_hint">sucorreo@mail.com</string>
    <string name="nombre_completo">Nombre y apellido</string>
    <string name="cedula">Cédula Ej: 18272737</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="password_confirm">Confirme su contraseña</string>
    <string name="password_hint">123456890</string>
    <string name="login_btn">Ingresar</string>
    <string name="salir_btn">Salir</string>
    <string name="crear_cuenta">Crear cuenta nueva?</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="title_activity_dashboard2">Edukt - Timeline</string>

    <!-- Urls String -->
    <!--<string name="url_json_gettimeline">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-timeline</string>
    <string name="url_json_getteachers">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-teachers</string>
    <string name="url_json_getnotifications">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-notifications</string>
    <string name="url_json_getdocuments">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-documents</string>
    <string name="url_json_getmyaccount">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-my-account</string>
    <string name="url_json_getuniversidades">http://10.0.2.2/edukt_web/web/index.php?r=json-resp/get-my-account</string>
    <string name="url_json_addnotifications">http://10.0.2.2/edukt_web/web/json-resp/add-notifications</string>-->
    <string name="url_json_gettimeline">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-timeline</string>
    <string name="url_json_getteachers">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-teachers</string>
    <string name="url_json_getnotifications">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-notifications</string>
    <string name="url_json_getdocuments">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-documents</string>
    <string name="url_json_getmyaccount">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-my-account</string>
    <string name="url_json_getuniversidades">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/get-universidades</string>

    <string name="url_json_addnotifications">http://www.i3soluciones.com/edukt/edukt_web/web/json-resp/add-notifications</string>

    <!-- myAccount -->
    <string name="account_name">Nombre:</string>
    <string name="account_email">Email:</string>
    <string name="account_cedula">Cedula:</string>
    <string name="account_universidad">Universidad:</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="chooser_title">Seleccione o tome una nueva foto</string>

    <!-- Register -->
    <string name="register_user_success">Usuario registrado exitosamente</string>
    <string name="register_user_error">Ocurrio un error durante el registro</string>
    <string name="button_register">Registrar</string>

    <!-- Notifications -->
    <string name="hint_notifications_title">Ingrese el titulo del mensaje:</string>
    <string name="hint_notifications_bar_title">Redactar mensaje</string>
    <string name="hint_notifications_descripcion">Ingrese el cuerpo del mensaje:</string>
    <string name="add_notifications_success">Mensaje publicado con exito</string>
    <string name="add_notifications_error">Error al publicar el mensaje</string>
    <string name="button_add_notifications">Publicar</string>

    <!-- Buttons -->
    <string name="button_guardar">Guardar</string>
    <string name="button_volver">Volver</string>

    <!-- Login -->
    <string name="error_bad_login">Usuario/Contraseña incorrecta</string>
    <string name="password_incorrect_length">incorrecta</string>
    <string name="server_unreachable">Sin conexion con el servidor</string>




    <string name="password_font">sans-serif</string>

</resources>
