<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >

        <!--  Name EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_completo"
                style="@style/EditText" />
        </android.support.design.widget.TextInputLayout>
        
		<!--  Email EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Registrarse"
                android:inputType="textEmailAddress"
                style="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <!--  Cedula EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerCedula"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cedula"
                android:inputType="number"
                style="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <!--  Pasword EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Confirm-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/registerPasswordConfirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                style="@style/EditText" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <TextView
                android:id="@+id/labelUniversidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:textColor="#cccccc"
                android:text="Seleccione su universidad"
                android:textSize="18dp"
                android:paddingLeft="4dp"
                />

            <Spinner
                android:id="@+id/registerUniversidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"
                android:labelFor="@string/spinner_prompt"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <TextView android:id="@+id/register_error"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:textColor="#e30000"
            		android:padding="10dip"
            		android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:gravity="center_horizontal">

            <!-- Login Button -->
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/button_color"
                card_view:cardCornerRadius="@dimen/raised_radius"
                android:layout_margin="@dimen/raised_margin"
                card_view:cardElevation="@dimen/raised_elevation">

                <TextView android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/raised_padding1"
                    android:paddingBottom="@dimen/raised_padding1"
                    android:paddingLeft="@dimen/raised_padding2"
                    android:paddingRight="@dimen/raised_padding2"
                    android:textColor="@color/text_color_main"
                    android:text="@string/button_guardar"
                    android:textSize="@dimen/raised_text_size"/>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>