<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:minHeight="500dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@drawable/splash_small"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp" />

        <!--  Email TextField -->
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textColorHint="#ffcccccc"
            android:hint="@string/email_hint"
            android:layout_marginTop="49dp" />

        <!--  Password TextField -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:textColor="#ffffff"
            android:textColorHint="#ffcccccc"
            android:hint="@string/password"
            android:background="@null"/>

        <!--  LoginError TextField -->
        <TextView android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#e30000"
            android:textStyle="bold"
            android:enabled="true"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_horizontal">



            <!-- Registrarse Button -->
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/button_color"
                card_view:cardCornerRadius="@dimen/raised_radius"
                android:layout_margin="@dimen/raised_margin"
                card_view:cardElevation="@dimen/raised_elevation">

            <TextView android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/raised_padding1"
                android:paddingBottom="@dimen/raised_padding1"
                android:paddingLeft="@dimen/raised_padding2"
                android:paddingRight="@dimen/raised_padding2"
                android:textColor="@color/text_color_main"
                android:text="@string/login_crear"
                android:textSize="@dimen/raised_text_size"/>



            </android.support.v7.widget.CardView>
            <!-- Login Button -->
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/button_color"
                card_view:cardCornerRadius="@dimen/raised_radius"
                android:layout_margin="@dimen/raised_margin"
                card_view:cardElevation="@dimen/raised_elevation">

                <TextView android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/raised_padding1"
                    android:paddingBottom="@dimen/raised_padding1"
                    android:paddingLeft="@dimen/raised_padding2"
                    android:paddingRight="@dimen/raised_padding2"
                    android:textColor="@color/text_color_main"
                    android:text="@string/login_btn"
                    android:textSize="@dimen/raised_text_size"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>