<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ve.ula.edukt_mobile.MyAccountFragment"
    android:background="@color/app_bg">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <include layout="@layout/circle_progress_bar"/>

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/profilePic"
                android:layout_width="@dimen/feed_item_profile_pic_big"
                android:layout_height="@dimen/feed_item_profile_pic_big"
                android:scaleType="fitCenter"
                android:layout_centerHorizontal="true">
            </com.android.volley.toolbox.NetworkImageView>

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/feed_item_profile_info_padd"
                android:layout_below="@+id/profilePic"
                android:paddingTop="@dimen/feed_item_status_pad_top" >

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:textStyle="bold"
                    android:text="@string/account_name" />
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:paddingLeft="@dimen/feed_item_profile_info_padd" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/feed_item_profile_info_padd"
                android:layout_below="@+id/linear1" >

                <TextView
                    android:id="@+id/account_cedula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:textStyle="bold"
                    android:text="@string/account_cedula" />
                <TextView
                    android:id="@+id/cedula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:paddingLeft="@dimen/feed_item_profile_info_padd" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/feed_item_profile_info_padd"
                android:layout_below="@+id/linear2" >

                <TextView
                    android:id="@+id/account_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:textStyle="bold"
                    android:text="@string/account_email" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:paddingLeft="@dimen/feed_item_profile_info_padd" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/feed_item_profile_info_padd"
                android:layout_below="@+id/linear3" >

                <TextView
                    android:id="@+id/account_universidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:textStyle="bold"
                    android:text="@string/account_universidad" />
                <TextView
                    android:id="@+id/universidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/feed_item_profile_name"
                    android:paddingLeft="@dimen/feed_item_profile_info_padd" />

            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>



</FrameLayout>
